# surgery_sim

./: CMakeLists.txt  package.xml
SwapWith-Universal_Robot/experiment/ur_description/urdf/inc/: ur_macro.xacro
SwapWith-Universal_Robot/training/ur_description/urdf/inc/: ur_macro.xacro
SwapWith-Universal_Robot/ur_description/urdf/inc/: ur_macro.xacro
cfg/: ErrConfig.cfg  HapConfig.cfg
launch/: cameras_rviz.launch  for_testing.launch  frame_publisher.launch  init_devices.launch  init_sim.launch  left.launch  mono.launch  no_ff.launch  real_robot_launch.launch  right.launch  rviz.launch  sim_frame_publisher.launch  stereo (copy).launch  stereo.launch  surgery.launch  ur5e_bringup.launch
msg/: Density.msg  PedalEvent.msg
rviz/: cameras.rviz  haptic.rviz  plan_test.rviz
scripts/: east_init.py  manual_initialization.py  manual_initialization_node.py  manual_initialization_real.py  middle_init.py  north_init.py  play.sh  record_bag.sh  south_init.py  tf_precise.py  tlx_csv_converter.py  train_init.py  west_init.py
src/: data_logger.cpp  density_calc.cpp  frame_tf_broadcaster.cpp  haptic_plan.cpp  haptic_to_camera.cpp  haptic_visualize.cpp  key_test.cpp  listener.cpp  marker_overlay.cpp  overlay_broadcast.cpp  pedal_controller.cpp  plan_listener.cpp  plan_tf_broadcaster.cpp  point_counter.cpp  projected_error.cpp  reset_node.cpp  reset_server.cpp  sim_user_overlay.cpp  switch_node.cpp  switch_node_no_ff.cpp  task_space_traj_reset.cpp  user_overlay.cpp  user_overlay_planner.cpp  xls_csv_converter.cpp
srv/: Reset.srv
surgery_description/: load_ur.launch  load_ur.launch.xml  load_ur5e.launch  surgery.urdf  ur.xacro  ur5e_controllers.yaml  ur_macro.xacro
